--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@tailwindcss/vite": "^4.0.9",
         "clsx": "^2.1.1",
+        "path": "^0.12.7",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-markdown": "^10.0.0",
@@ -19,8 +20,10 @@
     },
     "devDependencies": {
         "@eslint/js": "^10.0.0",
+        "@types/node": "^22.13.7",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
+        "@vitejs/plugin-react": "^4.3.4",
         "@vitejs/plugin-react-swc": "^3.8.0",
         "eslint": "^9.21.0",
         "eslint-plugin-react-hooks": "^5.1.0",
