--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@tailwindcss/vite": "^4.0.9",
         "clsx": "^2.1.1",
-        "path": "^0.12.7",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "react-markdown": "^10.0.0",
-        "tailwindcss": "^4.0.9"
+        "tailwindcss": "^4.0.9",
+        "@tailwindcss/vite": "^4.0.9"
     },
     "devDependencies": {
-        "@eslint/js": "^10.0.0",
+        "path": "^0.12.7",
+        "@eslint/js": "^9.21.0",
         "@types/node": "^22.13.7",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
