--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@tailwindcss/vite": "^4.0.9",
         "clsx": "^2.1.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "tailwindcss": "^4.0.9",
-        "@tailwindcss/vite": "^4.0.9"
+        "react-router": "^7.3.0",
+        "tailwindcss": "^4.0.9"
     },
     "devDependencies": {
-        "path": "^0.12.7",
         "@eslint/js": "^9.21.0",
         "@types/node": "^22.13.7",
         "@types/react": "^19.0.10",
@@ -28,6 +28,7 @@
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^16.0.0",
+        "path": "^0.12.7",
         "sass-embedded": "^1.85.1",
         "typescript": "~5.7.3",
         "typescript-eslint": "^8.25.0",
