--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.6.1",
         "@tailwindcss/vite": "^4.0.9",
         "clsx": "^2.1.1",
         "lenis": "^1.2.3",
