--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
         "@reduxjs/toolkit": "^2.6.1",
         "@tailwindcss/vite": "^4.0.9",
         "clsx": "^2.1.1",
+        "i18next": "^24.2.3",
+        "i18next-browser-languagedetector": "^8.0.4",
         "lenis": "^1.2.3",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-i18next": "^15.4.1",
         "react-icons": "^5.5.0",
         "react-redux": "^9.2.0",
         "react-router": "^7.3.0",
