--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react-dom": "^19.0.0",
         "react-i18next": "^15.4.1",
         "react-icons": "^5.5.0",
+        "react-intersection-observer": "^9.16.0",
         "react-markdown": "^10.1.0",
         "react-redux": "^9.2.0",
         "react-router": "^7.3.0",
