--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "vitest"
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.6.1",
@@ -28,6 +29,10 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
+        "@testing-library/dom": "^10.0.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.2.0",
+        "@testing-library/user-event": "^14.6.1",
         "@types/node": "^22.13.7",
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
@@ -37,10 +42,12 @@
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^16.0.0",
+        "jsdom": "^26.0.0",
         "path": "^0.12.7",
         "sass-embedded": "^1.85.1",
         "typescript": "~5.7.3",
         "typescript-eslint": "^8.25.0",
-        "vite": "^6.2.0"
+        "vite": "^6.2.0",
+        "vitest": "^3.0.9"
     }
 }
