--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "tsc -b && vite build",
         "lint": "eslint .",
         "preview": "vite preview",
-        "test": "vitest"
+        "test": "vitest run",
+        "prepare": "husky"
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.6.1",
@@ -42,6 +43,7 @@
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^16.0.0",
+        "husky": "^9.1.7",
         "jsdom": "^26.0.0",
         "path": "^0.12.7",
         "sass-embedded": "^1.85.1",
