--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
         "lint": "eslint .",
         "preview": "vite preview",
         "test": "vitest run",
+        "test:ui": "vitest --ui",
         "prepare": "husky"
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.6.1",
-        "@tailwindcss/vite": "^4.0.9",
+        "@tailwindcss/vite": "^4.0.15",
         "clsx": "^2.1.1",
         "i18next": "^24.2.3",
         "i18next-browser-languagedetector": "^8.0.4",
@@ -25,31 +26,32 @@
         "react-intersection-observer": "^9.16.0",
         "react-markdown": "^10.1.0",
         "react-redux": "^9.2.0",
-        "react-router": "^7.3.0",
-        "tailwindcss": "^4.0.9"
+        "react-router": "^7.4.0",
+        "tailwindcss": "^4.0.15"
     },
     "devDependencies": {
-        "@eslint/js": "^9.21.0",
-        "@testing-library/dom": "^10.0.0",
+        "@eslint/js": "^9.23.0",
+        "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.2.0",
         "@testing-library/user-event": "^14.6.1",
-        "@types/node": "^22.13.7",
-        "@types/react": "^19.0.10",
+        "@types/node": "^22.13.13",
+        "@types/react": "^19.0.12",
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react": "^4.3.4",
-        "@vitejs/plugin-react-swc": "^3.8.0",
-        "eslint": "^9.21.0",
-        "eslint-plugin-react-hooks": "^5.1.0",
+        "@vitejs/plugin-react-swc": "^3.8.1",
+        "@vitest/ui": "3.0.9",
+        "eslint": "^9.23.0",
+        "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^16.0.0",
         "husky": "^9.1.7",
         "jsdom": "^26.0.0",
         "path": "^0.12.7",
-        "sass-embedded": "^1.85.1",
-        "typescript": "~5.7.3",
-        "typescript-eslint": "^8.25.0",
-        "vite": "^6.2.0",
+        "sass-embedded": "^1.86.0",
+        "typescript": "~5.8.2",
+        "typescript-eslint": "^8.27.0",
+        "vite": "^6.2.3",
         "vitest": "^3.0.9"
     }
 }
