--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "eslint .",
         "preview": "vite preview",
         "test": "vitest run",
+        "test:coverage": "vitest run --coverage --no-cache",
         "test:ui": "vitest --ui",
         "prepare": "husky"
     },
@@ -40,6 +41,8 @@
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react": "^4.3.4",
         "@vitejs/plugin-react-swc": "^3.8.1",
+        "@vitest/coverage-c8": "^0.33.0",
+        "@vitest/coverage-v8": "3.0.9",
         "@vitest/ui": "3.0.9",
         "eslint": "^9.23.0",
         "eslint-plugin-react-hooks": "^5.2.0",
