--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
-{
-    "name": "portfolio-site-upd",
+{    "name": "portfolio-site-upd",
     "private": true,
     "version": "1.0.0",
     "type": "module",
@@ -14,47 +13,46 @@
         "prepare": "husky"
     },
     "dependencies": {
-        "@reduxjs/toolkit": "^2.6.1",
-        "@tailwindcss/vite": "^4.0.15",
+        "@reduxjs/toolkit": "^2.8.2",
+        "@tailwindcss/vite": "^4.1.12",
         "clsx": "^2.1.1",
-        "i18next": "^24.2.3",
-        "i18next-browser-languagedetector": "^8.0.4",
-        "lenis": "^1.2.3",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "react-i18next": "^15.4.1",
+        "i18next": "^25.4.2",
+        "i18next-browser-languagedetector": "^8.2.0",
+        "lenis": "^1.3.11",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1",
+        "react-i18next": "^15.7.3",
         "react-icons": "^5.5.0",
         "react-intersection-observer": "^9.16.0",
         "react-markdown": "^10.1.0",
         "react-redux": "^9.2.0",
-        "react-router": "^7.4.0",
-        "tailwindcss": "^4.0.15"
+        "react-router": "^7.8.2",
+        "tailwindcss": "^4.1.12"
     },
     "devDependencies": {
-        "@eslint/js": "^9.23.0",
-        "@testing-library/dom": "^10.4.0",
-        "@testing-library/jest-dom": "^6.6.3",
-        "@testing-library/react": "^16.2.0",
+        "@eslint/js": "^9.34.0",
+        "@testing-library/dom": "^10.4.1",
+        "@testing-library/jest-dom": "^6.8.0",
+        "@testing-library/react": "^16.3.0",
         "@testing-library/user-event": "^14.6.1",
-        "@types/node": "^22.13.13",
-        "@types/react": "^19.0.12",
-        "@types/react-dom": "^19.0.4",
-        "@vitejs/plugin-react": "^4.3.4",
-        "@vitejs/plugin-react-swc": "^3.8.1",
-        "@vitest/coverage-c8": "^0.33.0",
-        "@vitest/coverage-v8": "3.0.9",
-        "@vitest/ui": "3.0.9",
-        "eslint": "^9.23.0",
+        "@types/node": "^24.3.0",
+        "@types/react": "^19.1.12",
+        "@types/react-dom": "^19.1.9",
+        "@vitejs/plugin-react": "^5.0.2",
+        "@vitejs/plugin-react-swc": "^4.0.1",
+        "@vitest/coverage-v8": "3.2.4",
+        "@vitest/ui": "3.2.4",
+        "eslint": "^9.34.0",
         "eslint-plugin-react-hooks": "^5.2.0",
-        "eslint-plugin-react-refresh": "^0.4.19",
-        "globals": "^16.0.0",
+        "eslint-plugin-react-refresh": "^0.4.20",
+        "globals": "^16.3.0",
         "husky": "^9.1.7",
-        "jsdom": "^26.0.0",
+        "jsdom": "^26.1.0",
         "path": "^0.12.7",
-        "sass-embedded": "^1.86.0",
-        "typescript": "~5.8.2",
-        "typescript-eslint": "^8.27.0",
-        "vite": "^6.2.3",
-        "vitest": "^3.0.9"
+        "sass-embedded": "^1.91.0",
+        "typescript": "~5.9.2",
+        "typescript-eslint": "^8.41.0",
+        "vite": "^7.1.4",
+        "vitest": "^3.2.4"
     }
 }
